--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
       var gameInstance = UnityLoader.instantiate("gameContainer", "Build/DoomsdayLoversV2.json", {onProgress: UnityProgress});
     </script>
   </head>
-  <body style="background-color: black;">
+  <body>
     <div class="webgl-content">
       <div id="gameContainer" style="width: 480px; height: 800px"></div>
+      <div class="footer">
+        <div class="webgl-logo"></div>
+        <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
+        <div class="title">Ludum Dare 40</div>
+      </div>
     </div>
   </body>
 </html>
