--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Ludum Dare 40</title>
+    <title>Doomsday Lovers | Ludum Dare 40</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>  
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/DoomsdayLoversV2.json", {onProgress: UnityProgress});
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/DoomsdayLovers.json", {onProgress: UnityProgress});
     </script>
   </head>
   <body style="background-color: black;">
     <div class="webgl-content">
-      <div id="gameContainer" style="width: 480px; height: 800px"></div>
+      <div id="gameContainer" style="width: 384px; height: 640px"></div>
     </div>
   </body>
 </html>
